# LegoRoboterControl

UltraCalibrate/: .cproject  .project
brain/: .cproject  .project  CMakeLists.txt  package.xml
brain/src/: Navigation.cpp  Navigation.h  Scananalyzer.cpp  Scananalyzer.h
brain2/: .cproject  .project  CMakeLists.txt  package.xml
brain2/src/: Navigation.cpp  Navigation.h
laserscanner/: .project
laserscannerTut/: .cproject  .project  CMakeLists.txt  parkour.txt  parkour2.txt
laserscannerTut/include/: Parkour.h  Robot.h  ScanAnalyzer.h  Sensor.h  StructsAndMore.h
laserscannerTut/src/: Parkour.cpp  Robot.cpp  ScanAnalyzer.cpp  Sensor.cpp  StructsAndMore.cpp  main.cpp
nxt_control/: .cproject  .project  CMakeLists.txt  CMakeLists.txt~  package.xml
nxt_control/include/: Control.h
nxt_control/launch/: remoteControl.launch~  start.launch
nxt_control/src/: Control.cpp  Control.cpp~  Control1.cpp
tracking/: .cproject  .project  CMakeLists.txt  package.xml
tracking/include/: Tracker.h
tracking/src/: Tracker.cpp  image_publisher.cpp  run_tracker.cpp  test.cpp
ultrasonic/: .cproject  .project  CMakeLists.txt  package.xml
ultrasonic/src/: UltraCalibrate.cpp  UltraCalibrate.h  main.cpp
